shared/css/bootstrap_override.css
/* ... */
.jqx-grid-cell-alt {
	background: #e9edf2 !important;
}
.jqx-grid-cell-hover {
	background: #cbced1 !important;
}

/*******************************
********************************
END OF BASE/MOBILE STYLE
************************
END END END
********************************
*******************************/
/* ≥ md test */
@media (min-width: 768px) {
	button.help-btnSp-SearchWiki {
		-webkit-transform: none;
		-moz-transform: none;
		-o-transform: none;
		transform: none;
		-webkit-transform-origin: center center;
		-moz-transform-origin: center center;
		-o-transform-origin: center center;
		transform-origin: center center;
		/* optionally reset positioning so it sits in normal flow */
		position: absolute; /* or relative, depending on layout */
		right: 1.85rem;
		margin-bottom: 15px;
		top: 2.1rem;
		z-index: 1;
		padding-top: .5rem;
		padding-bottom: .25rem;
		overflow: hidden;
	}
	.btnSp-shim {
		margin-top: -.5rem !important;
	}
	.specSearchShim {
		margin-top: -1rem !important;
	}
	body.wiki-open .ui-dialog { /*Dialog needs to be out of the way when the wiki drawer is open.  */
		width: auto !important;
		max-width: calc(100vw - 500px) !important; /*Number should match drawer width.*/
		left: 500px !important; /*Number should match drawer width.*/
		right: 0 !important;
		box-sizing: border-box;
	}
	.wiki-drawer {
		width: 500px;
		max-width: 90vw;
		transform: translateX(-500px);
	}
	#wikiDrawer h2.headerSm {
		font-size: 1.25rem;
	}
	#wikiDrawer dt {
		float: left;
		display: inline-block;
		min-width: 25px !important;
		margin-right: .5rem;
	}
}
/* ≥ lg test */
@media (min-width: 992px) {
	/* Don’t push content on these sizes */
	#content.pushed {
		margin-left: 0;
		width: 100%;
	}
	/* Let dialogs behave normally on these widths */
	body.wiki-open .ui-dialog {
		width: auto;
		max-width: 100vw;
		left: 0;
		right: 0;
		box-sizing: border-box;
	}
}
/* ≥ xl (1200px) test */
@media (min-width: 1200px) {
	#content {
/*		transition: margin-left 0.3s cubic-bezier(.77, 0, .18, 1);*/
		width: 100%;
		box-sizing: border-box;
	}
	#content.pushed {
		margin-left: 325px;
		width: calc(100% - 325px);
	}
	body.wiki-open .ui-dialog { /* Override jQuery UI's inline width */
		width: auto !important;
		max-width: calc(100vw - 325px) !important;
		left: 325px !important; /* start right after the drawer */
		right: 0 !important;
		box-sizing: border-box; /* ensure it stays within viewport */
	}
	.wiki-drawer {
		width: 325px;
		max-width: 90vw;
		transform: translateX(-325px);
	}
	.col-xxl-1 {
		max-width: 12%;
	}
	.col-xxl-11 {
		max-width: 88%;
		padding-left: .25rem;
	}
	/*Flow classes are for browse specimen page*/
	ol.flowXXS, ul.flowXXS {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 221px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXXS li, ul.flowXXS li {
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXXS li a, ul.flowXXS li a {
		padding-right: 3px;
	}
	ol.flowXS, ul.flowXS {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 403px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXS li, ul.flowXS li {
		width: 33%;
		padding-right: 1rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXS li a, ul.flowXS li a {
		padding-right: 3px;
	}
	ol.flowSm,ul.flowSm {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 550px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowSm li,ul.flowSm li {
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowSm li a,ul.flowSm li a {
		padding-right: 3px;
	}
	ol.flowMd, ul.flowMd {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 627px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowMd li,ul.flowMd li{
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowMd li a,ul.flowMd li a {
		padding-right: 3px;
	}	
	ol.flowLg,ul.flowLg {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 815px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowLg li,ul.flowLg li {
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowLg li a, ul.flowLg li a {
		padding-right: 3px;
	}	
	ol.flowXL, ul.flowXL {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: 900px; /* need to specify height :-( */
		column-count: 3;
	}
	ol.flowXL li,ul.flowXL li {
		width: 33%;
		padding-right: .5rem;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowXL li a,ul.flowXL li a {
		padding-right: 3px;
	}
	ol.flowNone,ul.flowNone {
		display:flex;
		flex-flow: column wrap; /* direction: column */
		height: auto; /* need to specify height :-( */
		column-count: 1;
	}
	ol.flowNone li,ul.flowNone li {
		width: 100%;
		overflow-wrap: anywhere;
		list-style-position:inside;
	}
	ol.flowNone li a,ul.flowNone li a {
		padding-right: 3px;
	}
}
/* ... */

